# youtube-summary

./: .env.example  .gitignore  pyproject.toml  readme.md  setup.sh  summary.txt  transcript.txt  transcript_demo.py  youtube_transcript_methods.md
youtube_summary/: __init__.py  cli.py  summarizer.py  transcript.py
